--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,5 +17,9 @@
         android:id="@+id/articleFragment"
         android:name="com.example.android.newsapp.ui.ArticleFragment"
         android:label="fragment_article"
-        tools:layout="@layout/fragment_article" />
+        tools:layout="@layout/fragment_article" >
+        <argument
+            android:name="newsHeadlines"
+            app:argType="com.example.android.newsapp.models.NewsHeadlines" />
+    </fragment>
 </navigation>
